implement new feature of referralEmployee for trainee
