# service/service/trainee/trainee-core/src/main/java/bs/service/trainee/controller/TraineeControllerImpl.java
@@ -39,10 +39,10 @@ public class TraineeControllerImpl implements TraineeController {
 
     @Override
     @Secured(value = {"ROLE_ADMIN","ROLE_SUPER_ADMIN"})
-    public ResponseEntity<TraineeResultSet> _getAllTraineesByFilter(String quickSearch, Boolean isActive, Gender gender, String academicYear, LocalDate createdOnFrom, LocalDate createdOnTo, Integer pageNum, Integer pageSize, OrderDirections orderDir, String orderBy) {
+    public ResponseEntity<TraineeResultSet> _getAllTraineesByFilter(String quickSearch,Integer referralEmployeeId, Boolean isActive, Gender gender, String academicYear, LocalDate createdOnFrom, LocalDate createdOnTo, Integer pageNum, Integer pageSize, OrderDirections orderDir, String orderBy) {
 
         TraineeResultSet result = traineeService.getAllTraineesByFilter(
-                quickSearch, isActive, gender, academicYear,
+                quickSearch,referralEmployeeId, isActive, gender, academicYear,
                 createdOnFrom, createdOnTo, pageNum, pageSize, orderDir, orderBy);
         return ResponseEntity.ok(result);
     }
